--- a/Site_Form/mail.mjml
+++ b/Site_Form/mail.mjml
@@ -1,38 +1,30 @@
 <mjml>
   <mj-head>
-    <mj-title>Nouveau cours en ligne de Symfony - Inscrivez-vous dès maintenant !</mj-title>
+    <mj-title>Votre avis compte !</mj-title>
   </mj-head>
   <mj-body>
     <mj-section>
       <mj-column>
         <mj-text>
-           Bonjour [[NOM]] !
+          Bonjour [Nom du destinataire],
         </mj-text>
         <mj-text>
-          Je suis ravi de vous annoncer le lancement de notre tout nouveau cours en ligne de Symfony, qui débutera dans quelques semaines. Symfony est un framework PHP populaire et puissant qui est largement utilisé pour le développement d'applications Web. Si vous cherchez à améliorer vos compétences en développement Web et à apprendre les bases de Symfony, notre cours est parfait pour vous !
-        </mj-text>
-        <mj-text>
-          Nous avons conçu ce cours en utilisant la technologie MJML, qui permet une expérience utilisateur améliorée grâce à la compatibilité multi-plateforme et à la vitesse de chargement rapide. Vous pourrez suivre le cours en ligne à votre rythme et dans le confort de votre domicile ou de votre bureau.
-        </mj-text>
-        <mj-text>
-          Au cours de ce cours en ligne, vous apprendrez les bases de Symfony, notamment la création de contrôleurs, la gestion des routes, la création de formulaires et l'interaction avec une base de données. Nous avons également prévu des exercices pratiques pour vous aider à appliquer ces concepts dans des projets réels.
-        </mj-text>
-        <mj-text>
-          Notre équipe de formateurs experts en Symfony sera à votre disposition pour répondre à toutes vos questions et vous aider à résoudre les problèmes que vous pourriez rencontrer tout au long du cours.
+          Nous espérons que vous avez apprécié votre expérience avec [Nom de votre entreprise]. Nous aimerions vous demander quelques minutes de votre temps pour nous donner votre avis et nous aider à améliorer nos services.
         </mj-text>
         <mj-button href="https://ux-marketing.vercel.app/">
-          S'inscrire maintenant
+          Évaluer votre expérience
         </mj-button>
+        <mj-divider border-color="#CCCCCC" />
         <mj-text>
-          Le cours commencera dans quelques semaines et nous acceptons les inscriptions dès maintenant. Les places sont limitées, alors n'attendez pas pour vous inscrire et réserver votre place !
+          Nous tenons à vous remercier de votre confiance en notre entreprise et de nous donner l'opportunité de vous servir. Si vous avez des commentaires supplémentaires, des suggestions ou des préoccupations, n'hésitez pas à nous contacter directement à [Insérer votre adresse e-mail ici].
         </mj-text>
         <mj-text>
-          Si vous avez des questions ou des préoccupations, n'hésitez pas à nous contacter à [Insérer votre adresse e-mail ici]. Nous sommes impatients de vous aider à améliorer vos compétences en développement Web grâce à notre cours en ligne de Symfony.
+          Nous apprécions votre temps et votre contribution à notre entreprise.
         </mj-text>
         <mj-text>
           Cordialement,
           <br/>
-          Professeur simfony
+          [Votre nom]
         </mj-text>
       </mj-column>
     </mj-section>
